# hyperenforce-cav

./: README.md  run_benchmarks.sh  run_csf23_artifact.sh  run_demo.sh  run_hyperenforce.sh  run_obfuscation_ex.sh
2_synth_symbolic/: .gitignore  .pre-commit-config.yaml  README.md  debug.qcir  lbs_obfuscation.py  pyproject.toml
2_synth_symbolic/examples/: automata_io.py  js_ex.py  lbs_obfuscation.py
2_synth_symbolic/hyper_synth/: automata.py  automata_encoding.py  cardinality_qbf.py  compose.py  controller_synthesis.py  datatype.py  encoding.py  hyperautomata.py  hyperautomaton_encoding.py  qbf.py  qbf_encoding.py  qbf_io.py  qbf_solver.py  sat.py  sat_encoding.py  util.py
2_synth_symbolic/myexamples/: model_example.py  my_qbf_encoding.py  test-sunspider-crypto-md5.py  try_mytest.py  try_solving.py
2_synth_symbolic/obfuscation/: obfuscation_plant.py  obfuscation_spec.py  obfuscation_spec_symbolic.py
2_synth_symbolic/previous_runs/: buffer_vuln.py  example.py  exampple.py  gps_dinf.py  gps_dni.py  implicit1.py  implicit2.py  implicit2_extended.py  login.py  login_ni.py  mytest_strings.py  test_proj1.py  toml.py
2_synth_symbolic/quabs_build/: qcir2qcir  qcir2qdimacs
2_synth_symbolic/scripts/wsl/: caqe.bat  (+3 more)
2_synth_symbolic/temp_container/: model.dot
2_synth_symbolic/tests/: test_automata.py  test_cardinality_qbf.py  test_compose.py  test_groups.py  test_hyperauto.py  test_obfuscation_plant.py  test_obfuscation_spec.py  test_qbf.py  test_qbf_encoding.py  test_qbf_encoding_optimality.py  test_qbf_encoding_symbolic.py  test_qbf_io.py  test_sat_encoding.py
(+336 files in other folders)
