[tool.poetry]
name = "hyper_enforce"
version = "0.0.2"
description = "Tool for synthesizing discrete controllers satsifying hyperproperties."
authors = ["Andrew Wintenberg <awintenb@umich.edu>, Ana Costa <ana.oli.costa@gmail.com>, Tzu-Han Hsu <tzuhan@msu.edu>"]
packages = [
    { include = "hyper_synth" },
]

[tool.poetry.dependencies]
python = "^3.9"

DESops = {git="https://gitlab.eecs.umich.edu/M-DES-tools/desops.git"}
#DESops = {path="../desops"}
python-sat = {extras = ["pblib"], version = "^0.1.7-alpha.19"}
#z3-solver = "^4.10.2"
# There is an issue with parsing aiger files with repeated outputs in some versions of py-aiger (i.e. 6.1.24)
# Version 6.1.3 works
# This should be fixed in newer version of py-aiger (i.e. ^6.1.25)
py-aiger = "^6.1.25"
# If on Linux or Mac use
# pyeda = "0.28.0"
# On Windows, installation does not work very well, so a precompiled wheel is used instead (python 3.9)
pyeda = {file = "pyeda-0.28.0-cp39-cp39-win_amd64.whl"}
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
